[gd_scene load_steps=5 format=3 uid="uid://bjgg6bw4g255c"]

[ext_resource type="Script" path="res://game/src/menu/level_select.gd" id="1_8iqj0"]
[ext_resource type="Texture2D" uid="uid://dhh7t7ri3xr57" path="res://game/assets/img/menu/platformbox logo.png" id="1_at6ip"]
[ext_resource type="Texture2D" uid="uid://x0dhkghf745c" path="res://game/assets/img/objects/tilesets/nerp20 pixel logo.png" id="2_stteu"]
[ext_resource type="AudioStream" uid="uid://cdxb4cwka2rid" path="res://game/assets/music/Grand Melody.mp3" id="4_e7qkm"]

[node name="level_select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8iqj0")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="test_level1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Level 1"

[node name="test_level2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Level 2"

[node name="test_level3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Level 3"

[node name="back" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(72, 608)
scale = Vector2(0.65625, 0.65625)
texture = ExtResource("1_at6ip")

[node name="Sprite2D2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1032, 592)
texture = ExtResource("2_stteu")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_e7qkm")
autoplay = true

[connection signal="pressed" from="VBoxContainer/test_level1" to="." method="_on_test_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/test_level2" to="." method="_on_test_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/test_level3" to="." method="_on_test_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer/back" to="." method="_on_back_pressed"]
